--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
     width: 48%;
 }
 
+.pagination-container {
+    display: flex;
+    justify-content: center;
+}
+
 h1 {
     font-size: 24px;
     color: #333;
